tests/snapshots/corpus__ast@006.kdl.snap
---
source: tests/corpus.rs
expression: "node \"this\\nhas\\tescapes\"\nother r\"C:\\Users\\zkat\\\"\n"
---
Document {
    nodes: [
        Node {
            span: 0..26,
            ty: None,
            name: "node":0..4,
            attrs: [
                Attr {
                    span: 5..25,
                    name: None,
                    ty: None,
                    value: "\"this\nhas\tescapes\"":5..25,
                },
            ],
            children: [],
        },
        Node {
            span: 26..50,
            ty: None,
            name: "other":26..31,
            attrs: [
                Attr {
                    span: 32..49,
                    name: None,
                    ty: None,
                    value: "C:\\Users\\zkat\\":32..49,
                },
            ],
            children: [],
        },
    ],
}
