tests/snapshots/corpus__diagnostic@022.kdl.snap
---
source: tests/corpus.rs
expression: "node \"this is an \\invalid escape\"\n"
---

  × errors occured while parsing

Error: kdl::invalid_escape (https://docs.rs/kdl-visit/latest/kdl_visit/enum.ParseError.html#variant.InvalidStringEscape)

  × invalid escape sequence
   ╭────
 1 │ node "this is an \invalid escape"
   ·                  ──
   ╰────
  help: valid escapes are \n, \r, \t, \\, \/, \", \b, \f, and \u{XXXX}

