tests/snapshots/corpus__sexpr@004.kdl.snap
---
source: tests/corpus.rs
expression: "contents {\n  section \"First section\" {\n    paragraph \"This is the first paragraph\"\n    paragraph \"This is the second paragraph\"\n  }\n}\n"
---
(document
  (node
    (name contents)
    (trivia " " "{")
    (children
      (trivia "\n" "  ")
      (node
        (name section)
        (trivia " ")
        (argument
          (value "First section"))
        (trivia " " "{")
        (children
          (trivia "\n" "    ")
          (node
            (name paragraph)
            (trivia " ")
            (argument
              (value "This is the first paragraph"))
            (trivia "\n"))
          (trivia "    ")
          (node
            (name paragraph)
            (trivia " ")
            (argument
              (value "This is the second paragraph"))
            (trivia "\n"))
          (trivia "  "))
        (trivia "}"))
      (trivia "\n"))
    (trivia "}"))
  (trivia "\n"))
