tests/snapshots/corpus__sexpr@012.kdl.snap
---
source: tests/corpus.rs
expression: "// C style\n\n/*\nC style multiline\n*/\n\ntag /*foo=true*/ bar=false\n\n/*/*\nhello\n*/*/\n"
---
(document
  (trivia "// C style" "\n\n" "/*\nC style multiline\n*/" "\n\n")
  (node
    (name tag)
    (trivia " /*foo=true*/ ")
    (property
      (name bar)
      (trivia "=")
      (value false))
    (trivia "\n\n"))
  (trivia "/*/*\nhello\n*/*/" "\n"))
